--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -43,3 +43,21 @@ executable day-01-2
                        parsec3-numbers ==0.1.*
   hs-source-dirs:      day-01/assignment-2/
   ghc-options:         -Wall -O2
+
+executable day-02-1
+  main-is:             Main.hs
+  build-depends:       base >=4.12 && <4.13,
+                       advent-of-code2022,
+                       text ==1.2.*,
+                       parsec ==3.1.*
+  hs-source-dirs:      day-02/assignment-1/
+  ghc-options:         -Wall -O2
+
+executable day-02-2
+  main-is:             Main.hs
+  build-depends:       base >=4.12 && <4.13,
+                       advent-of-code2022,
+                       text ==1.2.*,
+                       parsec ==3.1.*
+  hs-source-dirs:      day-02/assignment-2/
+  ghc-options:         -Wall -O2
