--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -61,3 +61,13 @@ executable day-02-2
                        parsec ==3.1.*
   hs-source-dirs:      day-02/assignment-2/
   ghc-options:         -Wall -O2
+
+executable day-03-1
+  main-is:             Main.hs
+  build-depends:       base >=4.12 && <4.13,
+                       advent-of-code2022,
+                       text ==1.2.*,
+                       parsec ==3.1.*,
+                       containers ==0.6.*
+  hs-source-dirs:      day-03/assignment-1/
+  ghc-options:         -Wall -O2
