--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -71,3 +71,13 @@ executable day-03-1
                        containers ==0.6.*
   hs-source-dirs:      day-03/assignment-1/
   ghc-options:         -Wall -O2
+
+executable day-03-2
+  main-is:             Main.hs
+  build-depends:       base >=4.12 && <4.13,
+                       advent-of-code2022,
+                       text ==1.2.*,
+                       parsec ==3.1.*,
+                       containers ==0.6.*
+  hs-source-dirs:      day-03/assignment-2/
+  ghc-options:         -Wall -O2
