--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -132,3 +132,13 @@ executable day-06-1
                        parsec ==3.1.*
   hs-source-dirs:      day-06/assignment-1/
   ghc-options:         -Wall -O2
+
+executable day-06-2
+  main-is:             Main.hs
+  build-depends:       base >=4.12 && <4.13,
+                       advent-of-code2022,
+                       text ==1.2.*,
+                       parsec ==3.1.*,
+                       containers ==0.6.*
+  hs-source-dirs:      day-06/assignment-2/
+  ghc-options:         -Wall -O2
