--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -164,3 +164,13 @@ executable day-07-2
                        containers ==0.6.*
   hs-source-dirs:      day-07/assignment-2/
   ghc-options:         -Wall -O2
+
+executable day-08-1
+  main-is:             Main.hs
+  build-depends:       base >=4.12 && <4.13,
+                       advent-of-code2022,
+                       text ==1.2.*,
+                       parsec ==3.1.*,
+                       array ==0.5.*
+  hs-source-dirs:      day-08/assignment-1/
+  ghc-options:         -Wall -O2
