--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -174,3 +174,13 @@ executable day-08-1
                        array ==0.5.*
   hs-source-dirs:      day-08/assignment-1/
   ghc-options:         -Wall -O2
+
+executable day-08-2
+  main-is:             Main.hs
+  build-depends:       base >=4.12 && <4.13,
+                       advent-of-code2022,
+                       text ==1.2.*,
+                       parsec ==3.1.*,
+                       array ==0.5.*
+  hs-source-dirs:      day-08/assignment-2/
+  ghc-options:         -Wall -O2
