--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -184,3 +184,14 @@ executable day-08-2
                        array ==0.5.*
   hs-source-dirs:      day-08/assignment-2/
   ghc-options:         -Wall -O2
+
+executable day-09-1
+  main-is:             Main.hs
+  build-depends:       base >=4.12 && <4.13,
+                       advent-of-code2022,
+                       text ==1.2.*,
+                       parsec ==3.1.*,
+                       parsec3-numbers ==0.1.*,
+                       containers ==0.6.*
+  hs-source-dirs:      day-09/assignment-1/
+  ghc-options:         -Wall -O2
