--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -251,3 +251,14 @@ executable day-11-2
                        mtl ==2.2.*
   hs-source-dirs:      day-11/assignment-2/
   ghc-options:         -Wall -O2
+
+executable day-12-1
+  main-is:             Main.hs
+  build-depends:       base >=4.12 && <4.13,
+                       advent-of-code2022,
+                       text ==1.2.*,
+                       parsec ==3.1.*,
+                       mtl ==2.2.*,
+                       array ==0.5.*
+  hs-source-dirs:      day-12/assignment-1/
+  ghc-options:         -Wall -O2
