--- a/advent-of-code2022.cabal
+++ b/advent-of-code2022.cabal
@@ -284,3 +284,13 @@ executable day-13-1
                        mtl ==2.2.*
   hs-source-dirs:      day-13/assignment-1/
   ghc-options:         -Wall -O2
+
+executable day-13-2
+  main-is:             Main.hs
+  build-depends:       base >=4.12 && <4.13,
+                       advent-of-code2022,
+                       text ==1.2.*,
+                       parsec ==3.1.*,
+                       parsec3-numbers ==0.1.*
+  hs-source-dirs:      day-13/assignment-2/
+  ghc-options:         -Wall -O2
